# lunvex-code

./: .env.example  .gitignore  .pre-commit-config.yaml  ASYNC_DEFAULT_SUMMARY.md  ASYNC_TESTING_FINAL_REPORT.md  ASYNC_TESTING_SUMMARY.md  ASYNC_TESTS_COMPLETION_REPORT.md  CACHE_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  DEPENDENCY_UPDATE_REPORT.md  Dockerfile  EXAMPLE_ASYNC_USAGE.md  FINAL_REPORT.md  GIT_SAFETY_IMPLEMENTATION.md  IMPROVEMENTS_PROGRESS_REPORT.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_PLAN.md  LLM_CACHE_IMPLEMENTATION_SUMMARY.md  LUNVEX_TRANSITION_COMPLETE.md  Makefile  NEXT_STEPS_PYPI.md  PHASE4_SUMMARY.md  PROJECT_ANALYSIS_REPORT.md  PUBLISHING.md  PYPI_PUBLISHING_GUIDE.md  PYPI_TOKEN_SETUP.md  README.md  README_TEST_SYSTEM.md  README_UPDATE_REPORT.md  REFACTORING_REPORT.md  RELEASE_INSTRUCTIONS.md  TASK_COMPLETION_REPORT.md  TASK_PLANNING_IMPLEMENTATION.md  TEST_SYSTEM_STATUS.md  VULNERABILITY_SCANNER_FIX_REPORT.md  check_async_system.py  check_vulnerabilities.py  demo_cache_performance.py  demo_progress.py  docker-compose.yml  (+11 more)
config/: .lunvex-deps.yaml
deepseek_code/: __init__.py
docs/: ANIMATIONS.md  API.md  ARCHITECTURE.md  BENCHMARKS.md  CACHE_SYSTEM.md  DEMO_SCREENCAST.md  DEPENDENCY_MANAGEMENT.md  DEVELOPER_GUIDE.md  ERROR_HANDLING.md  EXAMPLES.md  FINAL_TEST_SUMMARY.md  GIT_TOOLS.md  LLM_CACHE.md  PHASE4_UX_IMPROVEMENTS.md  PROGRESS_IMPLEMENTATION_SUMMARY.md  PROGRESS_INDICATORS.md  PROJECT_STRUCTURE.md  PermissionSystem.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.0.md  ROADMAP.md  TASK_PLANNING.md  TROUBLESHOOTING.md  TYPE_HINTS_GUIDE.md  USER_GUIDE.md
examples/: check_subtask_mode.py  demo_llm_cache.py  dependency_config_example.yaml  git_advanced_demo.py  git_tools_demo.py  git_workflow_demo.py  permission_rules_example.py  real_subtask_example.py  task_planning_example.py  test_subtask_demo.py
lunvex_code/: __init__.py  agent.py  (+13 more)
(+96 files in other folders)
